--- a/CSS/styledark.css
+++ b/CSS/styledark.css
@@ -496,10 +496,8 @@ body.darkmode {
     );
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d2ac48",endColorstr="#af8727",GradientType=1);
   }
-
   section .bg {
     background-color: rgb(49, 49, 49);
-
     padding: 5px;
   }
 
@@ -554,6 +552,9 @@ body.darkmode {
     color: #ad8524;
     border: #544119 1px;
   }
+  section#Habilidades{
+    padding: 30px 0px 30px 0px;
+  }
 
   .espaço {
     background-color: rgb(210, 172, 72);
@@ -564,6 +565,7 @@ body.darkmode {
     border-radius: 0px;
     width: 100%;
     background-color: #131313;
+    padding: 30px 0px 30px 0px;
   }
 
   .amostras img {
@@ -600,7 +602,7 @@ body.darkmode {
   section#servicos .bg {
     background-color: rgb(49, 49, 49);
     margin: 5px;
-    padding: 100px;
+    padding: 100px 100px 100px 100px;
     color: #ddd;
     margin-left: 30%;
     width: 59.5%;
