--- a/CSS/mediastyle.css
+++ b/CSS/mediastyle.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1px) and (max-width: 767px) {
     /*DARKMODE*/
-    body.darkmode {
+    body {
       margin: 0;
       padding: 0;
       background: #000;
