--- a/CSS/style.css
+++ b/CSS/style.css
@@ -575,8 +575,14 @@ section#Habilidades h3 {
   background-color: #969696;
 }
 
+.amostras #bg{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
 .amostras img {
-  width: 50%;
+  width: 100%;
   height: auto;
 }
 
@@ -1372,6 +1378,12 @@ button {
     background-color: #969696;
     padding: 30px 0px 30px 0px;
   }
+
+  .amostras #bg{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+ }
   
   .amostras img {
     width: 100%;
@@ -2178,10 +2190,16 @@ section#Habilidades h3 {
   padding: 30px 0px 30px 0px;
 }
 
-.amostras img {
-  width: 100%;
-  height: auto;
-}
+ .amostras #bg{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+ }
+  
+  .amostras img {
+    width: 100%;
+    height: auto;
+  }
 
 .escondido {
   opacity: 0;
