--- a/CSS/stylebpv.css
+++ b/CSS/stylebpv.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 header{
     background-color: #000;
     width: 100%;
@@ -13,14 +13,20 @@ body{
     width: 100%;
 }
 h1{
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     font-size: 3em;
     color: #FEFE00;
 }
 h3{
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     font-size: 2em;
     color: #FEFE00;
 }
 p{
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     font-size: 25px;
     color: #ddd;
 }
@@ -46,6 +52,25 @@ section{
      padding: 5px;
      margin: 5px;
 }
+.btnfundo{
+    font-size: 20px;
+    color: #181818;
+    background-color: #FEFE00;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+}
+.btnsemfundo{
+    font-size: 20px;
+    color: #FEFE00;
+    background-color: transparent;
+    border: 2px solid #FEFE00;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+}
+
 
 /*fechamento geral*/
 /*abertura header*/
@@ -55,6 +80,19 @@ img#logotipo{
     margin: 5px;
     padding: 5px;
 }
+
+/*fechamento header*/
+/*abertura main*/
+a#saibamais{
+    padding: 10px;
+    margin: 5px;
+    font-size: 20px;
+    background-color: transparent;
+    border: 3px solid #FEFE00;
+    border-radius: 5%;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+}
 .double{
     display: flex;
     flex-direction: column;
@@ -62,7 +100,7 @@ img#logotipo{
     justify-content: center;
     align-items: center;
     width: 89%;
-    margin-left: 3em;
+    margin-left: 4em;
     margin-top: 3em;
 }
 .double div{
@@ -92,8 +130,66 @@ section#Categorias{
     margin: 5px;
 
 }
-/*fechamento header*/
-/*abertura main*/
-
-
+article#second section{
+    width: 70%;
+    height: 450px;
+    background-color: #181818;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0;
+}
+article#second section div{
+    margin-left: 1.5em;
+    padding-left: 10px;
+}
+#second aside{
+    margin: 0;
+    margin-left: 2em;
+    padding: 0;
+    height: 100%;
+    background-image: url(../IMAGE/0sZ6u1Er1ShCELkVoARga.jpg);
+    background-size: cover;
+}
+section#Destaque{
+    background-image: url(../IMAGE/vEs3I0OMzMsV5qQstbItV.jpg);
+    height: fit-content;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.principal-bg{
+    width: 70%;
+    display: grid;
+    grid-template: 
+    "um dois"
+    "tres quatro"
+    ;
+}
+.blur{
+    background-color: rgba(0, 0, 0, 0.5) ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.bg{
+    background-color: rgb(18, 18, 18, 0.5);
+}
+#um{
+  grid-area: um;
+  width: fit-content;
+}
+#dois{
+    grid-area: dois;
+    width: fit-content;
+}
+#tres{
+    grid-area: tres;
+    width: fit-content;
+}
+#quatro{
+    grid-area: quatro;
+    width: fit-content;
+}
 /*fechamento main*/
