--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2400,7 +2400,9 @@ button {
   background-color: transparent;
   font-size: 20px;
 }
-
+.semfundo{
+  background-color: transparent;
+}
 .button:hover {
   width: inherit;
   height: inherit;
