--- a/CSS/stylebpv.css
+++ b/CSS/stylebpv.css
@@ -4,12 +4,12 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 header{
-    background-color: #000;
+    background-color: #181818;
     width: 100%;
-    height: 100px;
+    height: 50px;
 }
 body{
-    background-color: #000;
+    background-color: #181818;
     width: 100%;
 }
 h1{
@@ -75,10 +75,11 @@ section{
 /*fechamento geral*/
 /*abertura header*/
 img#logotipo{
-    width: 100%;
+    width: 25%;
     height: auto;
     margin: 5px;
     padding: 5px;
+    
 }
 
 /*fechamento header*/
@@ -117,7 +118,7 @@ section#Categorias{
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 5%;
-    padding: 10px;
+    padding: 25px;
 }
 .tri-flex{
     margin-top: 2.5%;
@@ -131,15 +132,24 @@ section#Categorias{
 
 }
 article#second section{
-    width: 70%;
-    height: 450px;
-    background-color: #181818;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    width: 100%;
+    height: 600px;
+    background-image: url(../IMAGE/Cfl5Gcc-bIF6dO4l9xmew.jpg);
+    background-size: cover;
     margin: 0;
     padding: 0;
 }
+article#second .bg{
+    margin-left: 15%;
+    margin-top: 5%;
+    background-color: #181818;
+    width: 70%;
+    height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 article#second section div{
     margin-left: 1.5em;
     padding-left: 10px;
@@ -166,12 +176,14 @@ section#Destaque{
     "um dois"
     "tres quatro"
     ;
+    padding: 15px;
 }
 .blur{
     background-color: rgba(0, 0, 0, 0.5) ;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5%;
 }
 .bg{
     background-color: rgb(18, 18, 18, 0.5);
