--- a/CSS/stylebpv.css
+++ b/CSS/stylebpv.css
@@ -6,11 +6,12 @@
 header{
     background-color: #181818;
     width: 100%;
-    height: 50px;
+    height: 100px;
 }
 body{
     background-color: #181818;
     width: 100%;
+    text-align: center;
 }
 h1{
     font-family: "Lora", serif;
