--- a/CSS/style.css
+++ b/CSS/style.css
@@ -456,7 +456,7 @@ html {
   section#inicial {
     display: flex;
     text-align: left;
-    height: 1000px;
+    height: 700px;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
@@ -464,7 +464,7 @@ html {
   }
 
   section#inicial div {
-    margin: 3em;
+    margin: 0em 3em 3em 3em;
   }
 
   section#inicial h1 {
