--- a/CSS/styledark.css
+++ b/CSS/styledark.css
@@ -574,10 +574,12 @@
     .amostras #bg {
       display: flex;
       flex-direction: column;
+      flex-wrap: wrap;
+      align-content: space-around;
       text-align: center;
     }
     .amostras img {
-      width: 100%;
+      width: 70%;
       height: auto;
     }
 
