--- a/CSS/style.css
+++ b/CSS/style.css
@@ -611,7 +611,9 @@ html {
   }
 
   .amostras div {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50%;
     justify-content: space-evenly;
     margin: 3px;
   }
