--- a/CSS/calculadorastyle.css
+++ b/CSS/calculadorastyle.css
@@ -7,11 +7,12 @@ body {
   color: #333;
 }
 .container {
-  max-width: 500px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   background-color: #181818;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
 }
 form {
   padding: 10px 15px;
@@ -20,6 +21,7 @@ form {
   cursor: pointer;
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 h1 {
